# online_platform

./: .env.example  data.json  pyproject.toml  requirements.txt
config/: settings.py  urls.py
course/: admin.py  models.py  paginations.py  permissions.py  serializers.py  tests.py  urls.py  validations.py  views.py
course/migrations/: 0001_initial.py  0005_alter_lesson_title_coursesubscription.py
course/migrations/course/migrations/: 0002_alter_lesson_options_lesson_course.py  0003_course_owner_lesson_owner.py  0006_alter_coursesubscription_options_and_more.py
course/migrations/course/migrations/course/migrations/: 0004_rename_owner_course_user_rename_owner_lesson_user.py  0007_alter_coursesubscription_is_active_and_more.py
course/tests/: services.py  tests_of_course.py  tests_of_lessons.py
course/tests/course/tests/: tests_of_subscription.py
payment/: admin.py  models.py  serializers.py  urls.py  views.py
payment/migrations/: 0001_initial.py
payment/migrations/payment/migrations/: 0002_alter_payment_paid_lesson.py  0003_payment_payment_status.py
users/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
users/management/command/: csu.py
users/migrations/: 0001_initial.py
