[tool.poetry]
name = "online-platform"
version = "0.1.0"
description = ""
authors = ["AnnaPenkinaPython <annapenkina200121@mail.ru>"]
readme = "README.md"
packages = [{include = "online_platform"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

